--- a/Core/header.html
+++ b/Core/header.html
@@ -13,7 +13,7 @@
         </div>
 
         <ul>
-            <li><a href="game.html"><b>PERMAINAN</b></a></li>
+            <li><a href="game.php"><b>PERMAINAN</b></a></li>
             <li><a href=""><b>FORUM</b></a></li>
             <li><a href="rambu.html"><b>RAMBU</b></a></li>
             <li><a href=""><b>MASUK</b></a></li>
