--- a/Core/rambu.html
+++ b/Core/rambu.html
@@ -20,7 +20,7 @@
             </tr>
 			
 			<tr>
-				<td colspan="2"><h3>Rambu Perintah</h3></td>
+				<td id="perintah" colspan="2"><h3>Rambu Perintah</h3></td>
 			</tr>
 
 			<tr>
@@ -39,7 +39,7 @@
 			</tr>
 
 			<tr>
-				<td colspan="2"><h3>Rambu Larangan</h3></td>
+				<td id="larangan" colspan="2"><h3>Rambu Larangan</h3></td>
 			</tr>
 
 			<tr>
@@ -51,17 +51,20 @@
 				<td><img src="../Views/img/rambu/6.png"></td>
 				<td>Pesepeda dilarang memasuki jalan pada arah yang diberikan tanda ini.</td>
 			</tr>
+
+			<tr>
+				<td><img src="../Views/img/rambu/3-3.png"></td>
+				<td>Larangan masuk atau melalui ruas jalan bagi pesepeda </td>
+			</tr>
+			
+			<tr>
+				<td id="peringatan" colspan="2"><h3>Rambu Peringatan</h3></td>
+			</tr>
 			
 			<tr>
 				<td><img src="../Views/img/rambu/4.png"></td>
 				<td>Prioritas diberikan untuk kendaraan yang berada pada jalan utama.</td>
 			</tr>
-
-			<tr>
-				<td><img src="../Views/img/rambu/3-3.png" width="25%"></td>
-				<td>Peringatan akan adanya perlintasan anak-anak sekolah.</td>
-			</tr>
-			
 			<tr>
 				<td><img src="../Views/img/rambu/6-2.png"></td>
 				<td>Peringatan akan adanya APILL.</td>
@@ -90,7 +93,13 @@
 	</main>
 
 	<aside class="aside">
+		<h2 style="text-align: center;">Konten</h2>
 
+		<ul>
+			<li><a href="#perintah">Rambu Perintah</a></li>
+			<li><a href="#larangan">Rambu Larangan</a></li>
+			<li><a href="#peringatan">Rambu Peringatan</a></li>
+		</ul>
 	</aside>
 
 	<footer w3-include-html="footer.html"></footer>
